# cpp-one-config-many-platforms

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build-linux.yml  build-mac.yml  build-windows.yml  run-unit-tests.yml
additional-notes/: README.md
tests/: CMakeLists.txt
